# python-cookiecutter

./: README.md  cookiecutter.json  pyproject.toml
hooks/: post_gen_project.py  pre_gen_project.py
{{cookiecutter.project_name_kebab_case}}/: .dockerignore  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  pyproject.toml
{{cookiecutter.project_name_kebab_case}}/.github/workflows/: ci.yaml
{{cookiecutter.project_name_kebab_case}}/licenses/: BSD-3-Clause.txt  proprietary.txt
{{cookiecutter.project_name_kebab_case}}/mains/: main.py  main_cli.py
{{cookiecutter.project_name_kebab_case}}/readmes/: docker.md  no_docker.md
{{cookiecutter.project_name_kebab_case}}/tests/: main_test.py
{{cookiecutter.project_name_kebab_case}}/{{cookiecutter.__project_name_snake_case}}/: main.py
