[project]
name = "python-cookiecutter"
version = "0.7.0"
description = "Poetry managed Python project template"
authors = [
    {name = "atloo1"}
]
license = "MIT"
readme = "README.md"
requires-python = ">=3.9,<4"
dependencies = [
    "cruft (>=2.0.0,<3.0.0)"
]

[build-system]
requires = ["poetry-core>=2,<3"]
build-backend = "poetry.core.masonry.api"
