[project]
name = "{{cookiecutter.project_name_kebab_case}}"
version = "{{cookiecutter.project_version}}"
description = "{{cookiecutter.project_description}}"
authors = [
    {name = "{{cookiecutter.project_author_name}}"{% if cookiecutter.project_author_email != '' %}, email = "{{cookiecutter.project_author_email}}"{% endif %}}
]
license = "{{cookiecutter.project_license}}"
readme = "README.md"
requires-python = "{{cookiecutter.project_python_required}}"
dependencies = [
    "click (>=8.0.0,<9.0.0)"
]

[tool.poetry.group.dev.dependencies]
mypy = ">=1,<2"
pre-commit = ">=4,<5"
pytest = ">=8,<9"
ruff = ">=0.9,<1"

[build-system]
requires = ["poetry-core>=2,<3"]
build-backend = "poetry.core.masonry.api"

{%- if cookiecutter.opinionated_formatting == 'yes' %}

[tool.ruff]
line-length = 120

[tool.ruff.format]
quote-style = "single"
indent-style = "tab"

[tool.ruff.lint]
select = [
    "B",    # flake8-bugbear
    "E",    # pycodestyle
    "F",    # Pyflakes
    "I",    # isort
    "SIM",  # flake8-simplify
    "UP",   # pyupgrade
]

{%- endif %}
